--- a/app/region/region.css
+++ b/app/region/region.css
@@ -19,6 +19,7 @@
 
 .region.region-shade .sprite,
 .region.region-lava .sprite,
+.region.region-toxic .sprite,
 .region.region-water .sprite {
 	position: absolute;
 	pointer-events: none;
@@ -28,6 +29,7 @@
 .region.region-shade .actor-layer,
 .region.region-waterfall .sprite,
 .region.region-lava .sprite,
+.region.region-toxic .sprite,
 .region.region-water .sprite {
 
 	--bottomBoundary: -1px;
@@ -56,6 +58,7 @@
 
 .region.region-shade.water .sprite .region-color-wrapper,
 .region.region-shade.lava  .sprite .region-color-wrapper,
+.region.region-toxic .region-color-wrapper,
 .region.region-lava .region-color-wrapper {
 	overflow: hidden;
 	position: absolute;
@@ -66,15 +69,19 @@
 }
 
 .region.region-lava .region-color,
+.region.region-toxic .region-color,
 .region.region-water .region-color {
 	max-height: var(--viewportHeight);
 }
 
 .region.region-lava .sprite,
+.region.region-toxic .sprite,
 .region.region-water .sprite,
 .region.region-lava .region-filter-wrapper,
+.region.region-toxic .region-filter-wrapper,
 .region.region-water .region-filter-wrapper,
 .region.region-lava .region-color-wrapper,
+.region.region-toxic .region-color-wrapper,
 .region.region-water .region-color-wrapper {
 	max-height: calc(var(--viewportHeight) + 80px);
 }
@@ -97,6 +104,8 @@
 .region.region-shade .region-filter,
 .region.region-lava .region-color,
 .region.region-lava .region-filter,
+.region.region-toxic .region-color,
+.region.region-toxic .region-filter,
 .region.region-water .region-color,
 .region.region-water .region-filter {
 	position: absolute;
@@ -106,6 +115,7 @@
 	bottom: -64px;
 }
 
+.region.region-toxic .region-color,
 .region.region-lava .region-color {
 	top: 16px;
 }
