--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -521,6 +521,7 @@ input[type=number]::-webkit-outer-spin-button {
 .viewport-actors,
 .viewport-particles {
 	display: contents;
+	contain: strict;
 }
 
 .viewport-particles {
@@ -702,6 +703,10 @@ input[type=number]::-webkit-outer-spin-button {
 .combo-table .combo-list {
 	flex-direction: column-reverse;
 	display: flex;
+}
+
+.combo-table .combo-list > div:nth-last-child(n + 5) {
+	display: none;
 }
 
 @keyframes combo-pulse {
