--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -132,6 +132,23 @@
 	display: none;
 }
 
+.hud-bottom-left[data-extra^="https://www.newgrounds.com/"] .hud-character-string:not(:first-child)::after {
+	background-image: url('/ng_tank.svg'), url('/ng_beams.png');
+	background-size: contain, cover;
+	background-repeat: no-repeat;
+	background-color: rgba(255, 181, 14, 0.75);
+	background-position: center, center bottom;
+	width: 22px;
+	height: 22px;
+	border-radius: 10%;
+	margin-left: 0.5rem;
+	position: relative;
+	top: -1px;
+	display: inline-block;
+	/* filter: invert(1); */
+	content: ' ';
+}
+
 .hide-now-playing .hud-bottom-left {
 	transition: transform 750ms 250ms ease-in, filter 0.5s ease-in;
 
@@ -161,7 +178,7 @@
 	top: 0px;
 	transition: background-color 850ms;
 	background-image: url(/Sonic/headphones.png);
-	background-color: rgba(255,255,0,0.15);
+	background-color: rgba(255,192,0,0.75);
 	background-repeat: no-repeat;
 	background-position: center;
 	border-radius: 50%;
