--- a/app/Menu/menu.css
+++ b/app/Menu/menu.css
@@ -52,7 +52,9 @@
 
 .screen-card.screen-card-pause-menu li:focus,
 .screen-card.screen-card-pause-menu li.focused {
-	transition: background-color 0.1s ease-in-out, filter 0.1s ease-in-out;
+	transition:
+		background-color 0.1s ease-in-out, filter 0.1s ease-in-out,
+		box-shadow  0.1s ease-in-out, filter 0.1s ease-in-out;
 	/* font-weight: bold; */
 	--default-color: rgba(255,255,255,0.125);
 	background-color: rgba(255,255,255,0.125);
@@ -62,6 +64,7 @@
 	border-color: white;
 	/*text-shadow: 0em 0.15em 0.125em black;*/
 	outline: none;
+	box-shadow: inset 0rem 0rem 0.25rem #000;
 }
 
 .screen-card.screen-card-pause-menu li:focus .hud-character-string,
