--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -85,30 +85,29 @@
 }
 
 .emblem-hud img {
+	transform: rotateY(0deg) scale(1);
 	padding: 1.5px;
-	transform: rotateY(360deg);
 	transform-origin: 53% 50%;
-	animation:
-		emblem-spin 0.5s 3 linear,
-		emblem-flicker 0.5s 3 ease-out;
+	perspective: 10000px;
+}
+
+.emblem-hud img:last-child:not(.existing) {
+	animation: emblem-spin 2s ease-out 1, emblem-flicker 0.125s ease-in-out 14;
 }
 
 @keyframes emblem-spin {
 	0% {
-		transform: rotateY(360deg);
+		transform: rotateY(calc(360deg * 7)) scale(2.5);
 	}
 	100% {
-		transform: rotateY(0deg);
+		transform: rotateY(0deg) scale(1);
 	}
 }
 
 @keyframes emblem-flicker {
-	50% {
-		filter: brightness(1);
-	}
-	100% {
-		filter: brightness(10);
-	}
+	0% { filter: brightness(0.125); }
+	50% { filter: brightness(1); }
+	100% { filter: brightness(5); }
 }
 
 .emerald-hud img {
