--- a/app/intro/card.css
+++ b/app/intro/card.css
@@ -229,7 +229,6 @@
 	animation: chromium-spinup 1.5s ease-in; infinite forwards;
 }
 
-.closed .chromium-logo:after,
 .closing .chromium-logo:after,
 .spindash .chromium-logo:after {
 	animation: chromium-spin 96ms linear infinite forwards;
@@ -367,6 +366,10 @@
 
 .screen-card-sane-card.closed .main-elements-container > div:nth-child(2) img {
 	display: none;
+}
+
+.intro-cards:has(.titlecard.done:first-child:last-child) {
+	display:none;
 }
 
 @keyframes press-start {
