--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -803,3 +803,7 @@ input[type=number]::-webkit-outer-spin-button {
 viewport.level .intro-cards {
 	display: none;
 }
+
+.viewport.invert {
+	filter: invert(1);
+}
